// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.CookieBar agreedText="I agree" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      I agree
    </Button>
    <Button
      className="uu5-bricks-cookie-bar-button"
      colorSchema="default"
      onClick={[Function]}
    >
      <Lsi
        lsi={
          Object {
            "cs": "Zavřít",
            "en": "Close",
            "sk": "Zavrieť",
            "uk": "Закрити",
          }
        }
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkGrammar=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkGrammar=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkHighlight=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkHighlight=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkSpaces=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar checkSpaces=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar className="my-classname" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg my-classname uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar className="test-classname" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg test-classname uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="brown" 1`] = `
<Div
  className="color-schema-brown uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="brown-rich" 1`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="cyan" 1`] = `
<Div
  className="color-schema-cyan uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="cyan-rich" 1`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="default" 1`] = `
<Div
  className="color-schema-default uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="green" 1`] = `
<Div
  className="color-schema-green uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="green-rich" 1`] = `
<Div
  className="color-schema-green-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="grey" 1`] = `
<Div
  className="color-schema-grey uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="grey-rich" 1`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="orange" 1`] = `
<Div
  className="color-schema-orange uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="orange-rich" 1`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="pink" 1`] = `
<Div
  className="color-schema-pink uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="pink-rich" 1`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="purple" 1`] = `
<Div
  className="color-schema-purple uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="purple-rich" 1`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="red" 1`] = `
<Div
  className="color-schema-red uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="red-rich" 1`] = `
<Div
  className="color-schema-red-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="yellow" 1`] = `
<Div
  className="color-schema-yellow uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar colorSchema="yellow-rich" 1`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar content="This is Content from ContentMixin" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="This is Content from ContentMixin"
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar content=12345 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content={12345}
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar controlled=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar controlled=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar cookieKey="UCL.Parrot.Home_123v12" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar cookieValue="no" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar cookieValue="yes" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar default props 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar disabled=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar disabled=false 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar disabled=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar disabled=true 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar dynamic=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar dynamic=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar example DocKit UU5.Bricks.CookieBar example 01 should render 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <CookieBar
    agreedText="Unicorn"
    className="relative"
    colorSchema="blue"
    id="uuID2"
    key="uuID2"
  />
  <CookieBar
    className="relative"
    colorSchema="blue"
    id="uuID3"
    infoText="More information"
    key="uuID3"
  />
</div>
`;

exports[`UU5.Bricks.CookieBar expireDays=365 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar fixed="bottom" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar fixed="top" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-top"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu-fulltextsearch-0 uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar fullTextSearchPriority=0 2`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu-fulltextsearch-0 uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar hidden=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar hidden=false 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar hidden=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar hidden=true 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar id="myId" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar id="test-id" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="test-id-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar ignoreHTML=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar ignoreHTML=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoHref="https://unicorn.com/cz/cookies" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoTarget="_blank" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoTarget="_parent" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoTarget="_self" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoTarget="_top" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar infoText="More information" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
    <Link
      className="uu5-bricks-cookie-bar-link"
      colorSchema="default"
      content="More information"
      target="_blank"
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar name="myName" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="inline" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="inline" 3`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="smallBox" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar noPrint=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar noPrint=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar pureRender=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar pureRender=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar selected=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar selected=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  selected={true}
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "margin": 8,
    }
  }
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar textCorrector=false 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar textCorrector=true 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;

exports[`UU5.Bricks.CookieBar tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-cookie-bar uu5-common-bg uu5-bricks-cookie-bar-bottom"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="bigBoxCollection"
  tooltip="My Tooltip"
>
  <div>
    <Span
      content="Cookies help us to provide, protect and improve our services. By viewing this site, you agree to their use."
    />
  </div>
  <div
    className="uu5-bricks-cookie-bar-controls"
  >
    <Button
      bgStyle="transparent"
      className="uu5-bricks-cookie-bar-button"
      colorSchema="custom"
      onClick={[Function]}
    >
      <Icon
        icon="mdi-close"
      />
    </Button>
  </div>
</Div>
`;
